# fastapi-plotly-dash

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  app.py  dashapp.py  pyproject.toml
app/: dashapp.py  main.py
