[tool.poetry]
name = "fastapi-plotly-dash"
version = "0.1.0"
description = "Sample integration of FastAPI and Dash"
authors = ["Russ Snyder <ru.snyder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

dash = "^2.0.0"
fastapi = "*"
pandas = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

