[project]
name = "fastapi-plotly-dash"
version = "0.3.0"
description = "Sample integration of FastAPI and Dash"
authors = ["Russ Snyder <ru.snyder@gmail.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dash ~= 3.0",
  "fastapi[standard]",
  "pandas ~= 2.0",
  "uvicorn",
]

[dependency-groups]
dev = [
  "ruff"
]
